--- a/index.html
+++ b/index.html
@@ -50,6 +50,31 @@
           <h1>Boolando</h1>
           <h3>Spedizione e reso gratuiti</h3>
         </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-33 gallery">
+              <div class="card">
+                <img class="dress" src="./img/1.webp" alt="vestito" />
+                <div class="dress description-dress">
+                  <p class="brand-dress">Levi's</p>
+                  <p class="name-dress">Relaxed fit tee unisex</p>
+                  <p class="price-dress">14,99€<s> 29,99€ </s></p>
+                </div>
+              </div>
+            </div>
+            <div class="col-33 gallery">
+              <div class="card">
+                <img class="dress" src="./img/2.webp" alt="vestito" />
+                <di></di>
+              </div>
+            </div>
+            <div class="col-33 gallery">
+              <div class="card">
+                <img class="dress" src="./img/3.webp" alt="vestito" />
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
